--- a/apps/ledger-live-desktop/static/i18n/ja/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ja/app.json
@@ -608,22 +608,22 @@
   },
   "stake" : {
     "noFundsModal" : {
-      "title" : "Buy, swap or receive",
-      "text" : "You do not have enough {{coin}} available to stake",
-      "description" : "Not enough funds? Don’t worry, you can securely buy, swap or receive crypto directly in Ledger Live.",
+      "title" : "購入、スワップ、受け取り",
+      "text" : "ステーキングに十分な{{coin}}がありません",
+      "description" : "資金が足りませんか？ご心配いりません。Ledger Liveで暗号資産を直接、安全に購入、スワップ、または受け取ることができます。",
       "options" : {
         "buy" : {
-          "title" : "Buy",
-          "body" : "Buy with trusted  providers"
+          "title" : "購入",
+          "body" : "信頼できるプロバイダーで購入する"
         },
         "swap" : {
-          "title" : "Swap",
-          "label" : "Popular",
-          "body" : "Convert crypto to crypto securely"
+          "title" : "スワップ",
+          "label" : "人気",
+          "body" : "安全に別の暗号資産へ交換"
         },
         "receive" : {
-          "title" : "Receive",
-          "body" : "Receive crypto in your wallet"
+          "title" : "受け取る",
+          "body" : "ウォレットで暗号資産を受け取る"
         }
       }
     }
@@ -819,12 +819,44 @@
       "redelegation" : {
         "title" : "ご存知でしたか？",
         "description" : "Ledgerのバリデータは、現在お使いのバリデーターよりも低額の手数料でステーキングを行います。",
-        "cta" : "Ledgerで再デリゲート"
+        "cta" : "Ledgerで再デリゲート",
+        "linkText" : "再デリゲートとは？所要時間は？",
+        "solana" : {
+          "title" : "ご存知でしたか？",
+          "description" : "Ledgerは、お客様のバリデーターよりも低いレートをご提供いたします。このプロセスには最大4日かかる場合があります。"
+        },
+        "near" : {
+          "title" : "ご存知でしたか？",
+          "description" : "Ledgerは、お客様のバリデーターよりも低額のレートをご提供します。このプロセスには最大65時間かかる場合があります。"
+        },
+        "elrond" : {
+          "title" : "ご存知でしたか？",
+          "description" : "Ledgerは、お客様のバリデーターよりも低額のレートをご提供します。このプロセスには最大10日かかる場合があります。"
+        }
       },
       "delegation" : {
         "title" : "ご存知でしたか？",
         "description" : "Ledgerのバリデーターは、{{commission}}%の手数料で{{asset}}のステーキングを行います。",
-        "cta" : "Ledgerでステーキング"
+        "cta" : "Ledgerでステーキング",
+        "linkText" : "詳細はこちら",
+        "ethereum" : {
+          "lido" : {
+            "title" : "ご存知でしたか？",
+            "description" : "LidoでEthereumをステーキングして、毎日報酬を獲得しましょう。ロックアップ（凍結）期間なし。最低入金額なし。",
+            "cta" : "Lidoでステーキング"
+          },
+          "kiln" : {
+            "title" : "HODLに限定する必要はありません。ETHを運用しましょう",
+            "description" : "32ETH以上をお持ちですか？KilnでETHを安全にステーキングすることで、受動的な報酬を獲得できます。",
+            "cta" : "Kilnでステーキング"
+          }
+        },
+        "near" : {
+          "description" : "Ledger by FigmentバリデーターでNEARをステーキングしましょう。Ledgerの妥協のないセキュリティで保護されるため、お客様のコインがお客様の元から離れることはありません。"
+        },
+        "elrond" : {
+          "description" : "Ledger by FigmentバリデーターでELRONDをステーキングします。Ledgerの妥協のないセキュリティで保護されるため、お客様のコインがお客様の元から離れることはありません。"
+        }
       }
     }
   },
@@ -1399,7 +1431,7 @@
         "label" : "人気"
       },
       "earn" : {
-        "title" : "報酬獲得",
+        "title" : "ステーキング",
         "description" : "Ledgerで暗号資産を運用"
       }
     }
@@ -2236,6 +2268,13 @@
     },
     "switchButton" : "{{language}}に切り替える",
     "no" : "不要"
+  },
+  "deviceRename" : {
+    "title" : "{{ productName }}の名前を変更する",
+    "chooseName" : "名前を選択",
+    "placeholder" : "TonyのStax",
+    "remainingCharacters" : "残り{{ remainingCharacters }}文字",
+    "renamed" : "{{ productName }}の名前が\n「{{ name }}」に変更されました "
   },
   "deviceLocalization" : {
     "language" : "言語",
@@ -3761,6 +3800,9 @@
       "catalogRampServerDesc" : "複数のトレードプロバイダーを切り替える",
       "enablePlatformDevTools" : "プラットフォーム開発ツールの有効化",
       "enablePlatformDevToolsDesc" : "プラットフォームアプリの開発ツールウィンドウ表示を有効化",
+      "customLockScreen" : "カスタムロック画面アセット",
+      "customLockScreenDesc" : "カスタムロック画面のグラフィックアセットをデバッグする",
+      "customLockScreenCTA" : "開始",
       "featureFlagsTitle" : "Ledger Liveで使用される定義済みの機能フラグ",
       "featureFlagsDesc" : "上書きされた値は、アプリが再起動されるとリセットされます。有効なJSON文字列のみが受け入れられます。",
       "featureFlagsEdit" : "編集",
@@ -3776,7 +3818,9 @@
       "runLocalAppDeleteButton" : "削除",
       "runLocalAppOpenButton" : "開く",
       "enableLearnStagingUrl" : "学習ページのステージングURL",
-      "enableLearnStagingUrlDesc" : "学習ページのステージングURLを有効にする。"
+      "enableLearnStagingUrlDesc" : "学習ページのステージングURLを有効にする。",
+      "openOnboardingAppInstallDebug" : "オンボーディングアプリのインストールデバッグ画面を開く",
+      "openOnboardingAppInstallDebugDesc" : "同期オンボーディングアプリのインストール手順の構成要素で画面を開きます"
     },
     "currencies" : {
       "selectPlaceholder" : "暗号資産を選択",
@@ -3823,10 +3867,6 @@
         "experimentalCurrencies" : {
           "title" : "試験的統合",
           "description" : "利用可能な試験的暗号資産の統合を使用する。"
-        },
-        "experimentalExecutionOnRenderer" : {
-          "title" : "試験的ネットワーキング",
-          "description" : "試験的ネットワーキングを使用して、VPNでのLedger Liveエクスペリエンスを最適化します。現在のVPNでシステムエラーが発生する場合にのみ、有効化してください。"
         },
         "experimentalLanguages" : {
           "title" : "翻訳テスト",
@@ -3942,6 +3982,10 @@
       "fullNode" : {
         "title" : "Bitcoinフルノードを接続",
         "desc" : "同期およびトランザクションの送信用のBitcoinのフルノードを、Ledgerのエクスプローラを使用せずに設定する。"
+      },
+      "filterTokenOperationsZeroAmount" : {
+        "title" : "数量がゼロのトランザクションを非表示にする",
+        "desc" : "数量がゼロのトランザクションを非表示にすることで、イーサやPolygon、BSC、Tronのポイズニング攻撃などを事前に防ぐことができます。"
       }
     }
   },
@@ -5356,7 +5400,7 @@
       "description" : "トランザクションは、30秒以内に署名する必要があります。もう一度お試しください。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "エネルギーが必要額を満たしていません。手数料には最大30TRXが必要となります。"
+      "title" : "エネルギーが必要額を満たしていません。手数料には最大50TRXが必要となります。"
     },
     "PairingFailed" : {
       "title" : "ペアリングに失敗しました",
@@ -5521,6 +5565,10 @@
       "title" : "ファイルからの画像の読み込みに失敗しました",
       "description" : "別の画像でもう一度お試しください"
     },
+    "ImageLoadFromNftError" : {
+      "title" : "NFTからの画像の読み込みに失敗しました",
+      "description" : "別のNFTでもう一度お試しください"
+    },
     "ImageDownloadError" : {
       "title" : "画像のダウンロードに失敗しました",
       "description" : "別の画像でもう一度お試しください"
@@ -5593,6 +5641,13 @@
       "descriptionWithProductName" : "最初に{{ productName }}をセットアップする必要があります。\nセットアッププロセスをご案内します。",
       "goToOnboardingButton" : "デバイスをセットアップ",
       "goToOnboardingButtonWithProductName" : "{{ productName }}をセットアップする"
+    },
+    "EtherscanAPIError" : {
+      "title" : "トランザクションの取得に失敗しました",
+      "description" : "エクスプローラーで予期しないエラーが発生しました。後でもう一度お試しください"
+    },
+    "GasEstimationError" : {
+      "title" : "ガスの見積もりに失敗しました"
     }
   },
   "cryptoOrg" : {
@@ -5626,12 +5681,19 @@
   },
   "customImage" : {
     "title" : "カスタムロック画面",
+    "managerCTA" : "画面写真をロック",
     "steps" : {
       "choose" : {
         "stepLabel" : "画像を選択してください",
         "description" : "(...) として設定する画像を選択",
         "pickFromNftGallery" : "NFTギャラリーから選択",
-        "upload" : "パソコンからアップロード"
+        "myNfts" : "私のNFT",
+        "upload" : "パソコンからアップロード",
+        "chooseNft" : "NFTを選択",
+        "selectNft" : "NFTを選択",
+        "previousSelectNft" : "戻る",
+        "nftEmptyStateTitle" : "表示できるNFTはまだありません",
+        "nftEmptyStateDescription" : "NFTをウォレットに追加して始めます。"
       },
       "adjust" : {
         "stepLabel" : "画像を調整",
@@ -5657,5 +5719,37 @@
     },
     "customImageSet" : "ロック画面が設定されました",
     "finishCTA" : "終了する"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "{{deviceName}}と同じアプリをインストールしますか？",
+      "titleNoDeviceName" : "前のLedgerデバイスと同じアプリをインストールしますか？",
+      "subtitle" : "アプリはいつでもインストールまたは削除できます。",
+      "installCTA" : "アプリケーションの復元",
+      "skipCTA" : "後で行う"
+    },
+    "default" : {
+      "title" : "{{ productName }} はアプリを使用し、安全なブロックチェーントランザクションを有効にします",
+      "subtitle" : "既定のアプリ一式をダウンロードすることをお勧めします。後でさらにダウンロードできます。",
+      "installCTA" : "アプリケーションをインストール",
+      "skipCTA" : "後で行う"
+    },
+    "progress" : {
+      "loading" : "読み込み中...",
+      "resolving" : "依存関係を解決しています",
+      "progress" : "アプリのインストール中{{progress}}%",
+      "disclaimer" : "Ledger Liveからいつでもアプリを追加または削除できます。"
+    },
+    "cancelled" : {
+      "title" : "{{productName}}でアプリのインストールがキャンセルされました",
+      "subtitle" : "{{productName}}では、暗号資産とNFTトランザクションを承認するためにブロックチェーンアプリが必要です。",
+      "installCTA" : "今すぐインストールする",
+      "skipCTA" : "後で行う"
+    },
+    "locked" : {
+      "title" : "{{productName}}は、ロックされています",
+      "subtitle" : "{{productName}}のロックを解除し、インストールを再開してください。",
+      "installCTA" : "インストールを再開"
+    }
   }
 }
