--- a/apps/ledger-live-mobile/src/locales/ko/common.json
+++ b/apps/ledger-live-mobile/src/locales/ko/common.json
@@ -87,7 +87,12 @@
     "popular" : "인기 있는",
     "getSupport" : "지원 받기",
     "comingSoon" : "곧 출시 예정",
-    "restart" : "재시작"
+    "restart" : "재시작",
+    "loadMore" : "더 보기",
+    "patterns" : {
+      "id" : "ID {{ value }}",
+      "times" : "x{{ value }}"
+    }
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -549,7 +554,7 @@
       "description" : "트랜잭션은 30초 이내에 서명을 완료해야 합니다. 다시 시도해 주세요."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 30TRX를 지불할 수 있습니다."
+      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 50 TRX를 지불할 수 있습니다."
     },
     "UpdateYourApp" : {
       "title" : "앱 업데이트 필요",
@@ -811,6 +816,13 @@
       "title" : "장치가 잠금 상태입니다",
       "description" : "장치의 잠금을 해제하고 다시 시도하세요.",
       "descriptionWithProductName" : "{{ productName }}의 잠금을 해제하고 다시 시도하세요."
+    },
+    "EtherscanAPIError" : {
+      "title" : "트랜잭션을 가져오지 못했습니다",
+      "description" : "탐색기에서 예상하지 못한 오류가 발생했습니다. 나중에 다시 시도해 주세요"
+    },
+    "GasEstimationError" : {
+      "title" : "가스비를 추정하지 못했습니다"
     }
   },
   "crash" : {
@@ -1118,9 +1130,17 @@
         "title" : "알아보기",
         "desc" : "암호화폐, Web3, 디지털 보안 등에 대해 알아보세요"
       },
+      "news" : {
+        "title" : "뉴스",
+        "desc" : "암호화, 보안, web3에 대해 알아보고 최신 뉴스를 확인하세요"
+      },
       "ledgerApps" : {
         "title" : "앱",
         "desc" : "Ledger의 파트너 앱을 한 곳에서 모두 살펴보세요"
+      },
+      "browseWeb3" : {
+        "title" : "Web3 둘러보기",
+        "desc" : "Ledger와 완전히 통합된 Web3 살펴보기"
       },
       "earn" : {
         "title" : "소득 창출",
@@ -1267,8 +1287,13 @@
       },
       "recovery" : "이미 복구 문구가 있나요?",
       "protect" : {
-        "label" : "~60분",
-        "subTitle" : "Protect를 통해 복구하세요"
+        "subTitle" : "Ledger Recover를 통한 복구",
+        "drawer" : {
+          "title" : "Use Ledger Nano X",
+          "desc" : "Ledger Recover 소프트 런칭은 Ledger Nano X 전용입니다.",
+          "buyNanoX" : "Ledger Nano X 구매하기",
+          "discoverBenefits" : "장점 살펴보기"
+        }
       }
     },
     "stepNewDevice" : {
@@ -1495,25 +1520,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "둘러보기 ",
-          "label" : "스크린 상의 지시를 읽어보며 다양한 장치 활용 방법을 알아보세요."
+          "title" : "\"복구\"를 선택하세요",
+          "label" : "두 버튼을 동시에 눌러 선택하세요."
         },
         "1" : {
-          "title" : "\"복구\"를 선택하세요",
-          "label" : "두 버튼을 동시에 눌러 선택한 항목을 승인해주세요."
-        },
-        "2" : {
-          "title" : "\"Protect로 복구\" 모드를 선택합니다",
-          "label" : "두 버튼을 동시에 눌러 선택한 항목을 승인해주세요."
+          "title" : "\"Ledger Recover로 복구\"를 선택합니다.",
+          "label" : "두 버튼을 동시에 눌러 선택하세요."
         }
       },
       "nextStep" : "계속",
       "extraInfo" : {
-        "tooltip" : "내 Ledger에 표시되지 않음",
-        "title" : "내 Ledger에 Protect를 통한 복구가 표시되지 않는 이유는 무엇인가요?",
-        "desc1" : "장치가 Protect와 호환되지 않기 때문일 가능성이 가장 높습니다. 걱정하지 마세요. 해결 방법을 안내해 드리겠습니다.",
-        "desc2" : "당사로 연락하여 \"내 Ledger에 Protect를 통한 복구가 표시되지 않음\"을 선택하시면 지원해 드리겠습니다.",
-        "cta" : "수동으로 진행",
+        "tooltip" : "'Ledger Recover로 복구' 메뉴가 보이지 않습니다.",
+        "title" : "Ledger Nano X의 OS를 업데이트해야 합니다.",
+        "desc" : "OS를 업데이트하거나 Ledger 지원 부서로 문의하세요.",
+        "cta" : "업데이트 방법 알아보기",
         "supportLink" : "Ledger 지원 부서에 문의해주세요"
       }
     },
@@ -1653,6 +1673,11 @@
             "label" : "Nano X가 감지되는지 확인하세요."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Ledger Nano X connection",
+        "description" : "Make sure your Ledger is close to your phone and try again. <LinkBluethooth>Bluetooth® connection issues \n</LinkBluethooth>.\nIf Bluetooth® is working, you might need to update Ledger’s OS. Try updating the OS, or contact Ledger Support for assistance. ",
+        "learnHowToUpdate" : "Learn how to update"
       }
     },
     "stepImportAccounts" : {
@@ -2495,7 +2520,9 @@
         "bullet2" : "Ledger Live 버전, OS 지역, 언어, 지역"
       },
       "hideEmptyTokenAccounts" : "빈 토큰 계정 숨기기",
-      "hideEmptyTokenAccountsDesc" : "자산 페이지의 모든 빈 토큰 계정은 숨겨집니다."
+      "hideEmptyTokenAccountsDesc" : "자산 페이지의 모든 빈 토큰 계정은 숨겨집니다.",
+      "filterTokenOperationsZeroAmount" : "값이 0 인 경우 토큰 트랜잭션을 숨깁니다",
+      "filterTokenOperationsZeroAmountDesc" : "값이 없는 토큰 트랜잭션을 숨기는 것은 ETH, 폴리곤, BSC, 트론에 대한 잠재적인 주소 포이즌 공격을 방지 할 수 있습니다..."
     },
     "currencies" : {
       "header" : "통화",
@@ -2639,6 +2666,10 @@
         "experimentalSwap" : {
           "title" : "새로운 스왑 인터페이스",
           "description" : "새로운 실험적 스왑 인터페이스 사용"
+        },
+        "experimentalPlatformDiscover" : {
+          "title" : "v2 탐색",
+          "description" : "새로운 실험적 탐색 화면 사용"
         }
       },
       "developerFeatures" : {
@@ -3298,6 +3329,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "지갑을 디앱에 연결합니다"
     }
   },
   "signMessage" : {
@@ -5424,6 +5459,7 @@
     "warnDelegation" : "투표권 위임은 검증인으로부터 어떠한 보상도 보장하지 않습니다.",
     "to" : "to",
     "from" : "from",
+    "yield" : "Est. Yield",
     "forAnEstYield" : "추산 수익",
     "yieldPerYear" : "{{yield}}/년",
     "yieldInfos" : "다음에 의해 수익율이 제공됨:",
@@ -5551,6 +5587,7 @@
     "cta" : "계속"
   },
   "exchange" : {
+    "count" : "+ {{count}} more",
     "buy" : {
       "screenTitle" : "암호화폐 구매",
       "tabTitle" : "구매",
@@ -5696,6 +5733,50 @@
       }
     }
   },
+  "browseWeb3" : {
+    "catalog" : {
+      "title" : "Web3 둘러보기",
+      "subtitle" : "Ledger와 완전히 통합된 Web3 살펴보기",
+      "section" : {
+        "recentlyUsed" : "최근 사용된 항목",
+        "categories" : "카테고리"
+      },
+      "branch" : {
+        "soon" : "곧 출시 예정",
+        "experimental" : "실험",
+        "debug" : "디버그"
+      },
+      "banner" : {
+        "title" : "Live 카탈로그 살펴보기",
+        "description" : "암호화폐 세계의 새로운 가능성을 열어보세요 장치 하나로 모든 서비스를 안전하게 이용하세요(DeFi, NFT 지원 중, 서비스 확대 예정)."
+      },
+      "twitterBanner" : {
+        "description" : "또 어떤 서비스를 만나고 싶은지 해시태그로 알려주세요",
+        "tweetText" : "다음으로 만나볼 수 있는 Ledger 앱은..."
+      },
+      "pollCTA" : {
+        "title" : "설문조사",
+        "description" : "Ledger Live에서 가장 만나고 싶은 서비스는 무엇인가요?"
+      },
+      "developerCTA" : {
+        "title" : "개발자용",
+        "description" : "Ledger Live로 애플리케이션을 통합하는 데 필요한 모든 정보입니다."
+      }
+    },
+    "disclaimer" : {
+      "title" : "외부 애플리케이션",
+      "description" : "Ledger에서 운영하지 않는 애플리케이션으로 곧 이동합니다.",
+      "legalAdvice" : "Ledger에서 운영하지 않는 애플리케이션입니다. Ledger는 해당 애플리케이션으로 인한 자금의 손실이나 서비스 품질에 대한 책임을 지지 않습니다.\n\n언제나 귀하의 장치에 표시된 정보를 신중하게 확인하세요.",
+      "legalAdviceShort" : "Ledger는 자금 손실에 대해 책임을 지지 않습니다. 항상 장치에 표시된 정보를 확인하십시오.",
+      "checkbox" : "추가 알림을 보내지 마세요.",
+      "CTA" : "계속"
+    },
+    "webPlatformPlayer" : {
+      "infoPanel" : {
+        "website" : "웹사이트"
+      }
+    }
+  },
   "platform" : {
     "catalog" : {
       "title" : "Live 앱 카탈로그",
@@ -5795,6 +5876,7 @@
       "reload" : "새로고침",
       "noCryptosFound" : "발견된 코인이 없습니다",
       "noCurrencyFound" : "통화를 찾을 수 없습니다",
+      "noAppFound" : "발견된 앱 없음",
       "noSearchResultsFor" : "죄송합니다. <0>{{search}}</0>에 대한 코인을 찾지 못했습니다. 다른 키워드로 검색을 다시 시도해 주세요.",
       "noCurrencySearchResultsFor" : "죄송합니다. <0>{{search}}</0>에 대한 통화를 찾지 못했습니다. 다른 키워드로 검색을 다시 시도해 주세요.",
       "noSearchResults" : "죄송합니다. 검색 결과를 찾지 못했습니다.",
@@ -6004,22 +6086,10 @@
       "status" : {
         "new" : {
           "title" : "신규",
-          "desc" : "복구 문구 백업",
-          "0" : {
-            "title" : "수백만 명의 Ledger 사용자가 신뢰하는"
-          },
-          "1" : {
-            "title" : "귀하의 복구 문구는 귀하의 신원과 안전하게 연결됩니다"
-          },
-          "2" : {
-            "title" : "최첨단 암호화"
-          },
-          "3" : {
-            "title" : "3개의 탈중앙화된 부분으로 분할되어 복구 문구를 절대 도난당하지 않습니다"
-          },
+          "desc" : "비밀 복구 문구 없이 지갑에 대한 액세스를 복구하세요.",
           "actions" : {
-            "learnMore" : "자세히 알아보기",
-            "alreadySubscribed" : "이미 Protect에 가입하셨나요?"
+            "learnMore" : "그것이 제게 어떤 도움이 되나요?",
+            "alreadySubscribed" : "이미 가입하셨나요? <LinkAccount>내 계정 보기</LinkAccount>"
           }
         },
         "confirmIdentity" : {
@@ -6077,5 +6147,13 @@
         "emptyPassword" : "패스워드는 비워둘 수 없습니다"
       }
     }
+  },
+  "newsfeed" : {
+    "title" : "뉴스피드",
+    "poweredByCryptopanic" : "Cryptopanic 제공",
+    "noPosts" : "현재 이용 가능한 게시물이 없습니다"
+  },
+  "deviceConnect" : {
+    "title" : "장치 연결"
   }
 }
