feat: vet and vethor integration

--- a/apps/ledger-live-desktop/static/i18n/el/app.json
+++ b/apps/ledger-live-desktop/static/i18n/el/app.json
@@ -4229,6 +4229,9 @@
     "EthAppPleaseEnableContractData": {
       "title": "Please enable contract data in the Ethereum app settings"
     },
+    "VechainAppPleaseEnableContractDataAndMultiClause": {
+      "title": "Please enable contract data in the Vechain app settings"
+    },
     "InvalidXRPTag": {
       "title": "Invalid XRP Destination tag"
     },
