fix(mobile): hide vtho chart

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -941,7 +941,8 @@
     "week": "1W",
     "month": "1M",
     "year": "1Y",
-    "all": "ALL"
+    "all": "ALL",
+    "graphNotSupported": "graph not available for this token"
   },
   "carousel": {
     "title": "Close banner?",
